...
    EventRecorder.authAddEmailStart();

    // Check email is not already registered.
    final (emailAlreadyRegistered, _) =
        await _getUsernameFromEmail(emailController.text);
    if (emailAlreadyRegistered) {
      return (false, "Email is already registered to another account.");
    }

    try {
      await Amplify.Auth.updateUserAttribute(
        userAttributeKey: AuthUserAttributeKey.email,
        value: emailController.text,
...
            mainAxisSize: MainAxisSize.min,
            children: <Widget>[
              Text(_getWelcomeMessage()),
              TextField(
                controller: emailController,
                decoration: const InputDecoration(
                  labelText: "Email",
                  counterText: "",
                ),
                maxLength: 200,
                maxLines: 1,
                keyboardType: TextInputType.emailAddress,
              ),
...
            children: <Widget>[
              const Text(
                  "A verification code was sent to your email, please enter it here:"),
              TextField(
                controller: codeController,
                decoration: const InputDecoration(
                  labelText: "Verification Code",
                  counterText: "",
                ),
                maxLength: 200,
                maxLines: 1,
                keyboardType: TextInputType.number,
              ),
...
            ],
          ),
        ],
      ),
      actions: <Widget>[
        TextButton(
          child: const Text("Cancel"),
          onPressed: () {
            Navigator.of(context).pop();
          },
        ),
        _isLoading
            ? const SizedBox(
                width: 15, height: 15, child: CircularProgressIndicator())
            : FilledButton(
                child: Text(_pageIndex == 0 ? "Next" : "Complete"),
                onPressed: () {
                  if (_pageIndex == 0) {
                    _startFlow();
                  } else {
                    _completeFlow().then((successful) {
                      if (successful) {
...
  }

  String _getTitle() {
    if (widget.mode == AuthenticationMode.restoreAccount) {
      return "Restore Account";
    } else {
      return "Backup Account";
    }
  }

  String _getWelcomeMessage() {
    if (widget.mode == AuthenticationMode.restoreAccount) {
      return "To restore a previous account, enter your email address:";
...
