...

  @override
  Widget build(BuildContext context) {
    return WillPopScope(
        onWillPop: _onWillPop,
        child: AlertDialog(
          title: const Text("Wallet Top-Up"),
          content: _buildDialogContent(),
          actions: [_buildDialogAction()],
        ));
  }

  Widget _buildDialogContent() {
...
      case PurchaseStatus.initializing:
      case PurchaseStatus.finalizing:
        buttonText = "Cancel";
        break;
      case PurchaseStatus.error:
      case PurchaseStatus.complete:
        buttonText = "Close";
        break;
    }
    return TextButton(
      onPressed: _close,
      child: Text(buttonText),
    );
...
  Future<bool> _onWillPop() async {
    if (_purchaseStatus == PurchaseStatus.finalizing) {
      return (await showDialog(
            context: context,
            builder: (context) {
              return AlertDialog(
                title: const Text("Confirmation"),
                content: const Text(
                    "Purchase is finalizing, are you sure you wish to cancel? "
                    "Any unfinished purchase will be automatically refunded after 3 days."),
                actions: [
                  TextButton(
                    child: const Text("No"),
...
