...
            children: [
              Expanded(
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    const Text(
                      "Wallet Balance:",
                      style: TextStyle(fontSize: 12, color: Colors.grey),
                    ),
                    (wallet.isLoading || wallet.centBalance == null)
                        ? Container(
                            width: 80,
                            margin: const EdgeInsets.symmetric(vertical: 24.0),
...
                          ),
                  ],
                ),
              ),
              TextButton(
                onPressed: () => showInAppPurchaseDialog(context),
                child: const Text("Add 50¢"),
              ),
              IconButton(
                onPressed: _showCostBreakdown,
                icon: const Icon(Icons.info),
              ),
            ],
...
